# services/gateway/internal/models/models.go
@@ -159,9 +159,8 @@ type PorterListResponse struct {
 }
 
 type PorterCreateRequest struct {
-	Username string `json:"username" validate:"required,min=3,max=30"`
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required,min=6"`
+	Username string  `json:"username" validate:"required,min=3,max=30"`
+	Email    *string `json:"email,omitempty" validate:"omitempty,email"`
 }
 
 type PorterUpdateRequest struct {
